# symbolizer-rs

./: Cargo.toml  README.md
.github/workflows/: symbolizer-rs.yml
crates/symbolizer/: Cargo.toml
crates/symbolizer/examples/: symbolize-dump.rs
crates/symbolizer/fixtures/: mrt100.raw
crates/symbolizer/src/: addr_space.rs  address_space.rs  builder.rs  error.rs  guid.rs  lib.rs  misc.rs  modules.rs  pdbcache.rs  pe.rs  stats.rs  symbolizer.rs
crates/symbolizer/tests/: basics.rs
src/: hex_addrs_iter.rs  human.rs  lib.rs  main.rs  misc.rs  pdbcache.rs  pe.rs  symbolizer.rs
