[package]
name = "symbolizer-rs"
categories = ["command-line-utilities", "development-tools::debugging"]
description = "A fast execution trace symbolizer for Windows that runs on all major platforms and doesn't depend on any Microsoft libraries."
include = ["/Cargo.toml", "/LICENSE", "/src/**", "README.md"]
version = "0.1.0"
authors = ["Axel '0vercl0k' Souchet"]
license = "MIT"
rust-version = "1.70"
repository = "https://github.com/0vercl0k/symbolizer-rs"
keywords = ["windows", "kernel", "crash-dump", "symbols", "pdb"]
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
addr-symbolizer = { git = "https://github.com/0vercl0k/addr-symbolizer-rs", branch = "fbl_v0.1.0"}
env_logger = "0.11"
itoa = "1.0"
kdmp-parser = "0.5"

[profile.release]
debug = true
panic = "abort"
