[package]
name = "symbolizer-rs"
categories = ["command-line-utilities", "development-tools::debugging"]
description = "A fast execution trace symbolizer for Windows that runs on all major platforms and doesn't depend on any Microsoft libraries."
include = ["/Cargo.toml", "/LICENSE", "/src/**", "README.md"]
version = "0.3.0"
authors = ["Axel '0vercl0k' Souchet"]
license = "MIT"
repository = "https://github.com/0vercl0k/symbolizer-rs"
keywords = ["windows", "kernel", "crash-dump", "symbols", "pdb"]
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
addr-symbolizer = { git = "https://github.com/0vercl0k/addr-symbolizer-rs.git", branch = "fbl_0.2.0" }
env_logger = "0.11"
itoa = "1.0"
kdmp-parser = { git = "https://github.com/0vercl0k/kdmp-parser-rs.git", branch = "fbl_pedantic" }

[profile.release]
debug = true
panic = "abort"

[lints.clippy]
pedantic = "warn"
